--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
-    "Topic :: Software Development :: Visualization",
+    "Topic :: Scientific/Engineering :: Visualization",
     "Topic :: System :: Systems Administration",
 ]
 dependencies = [
