--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,1 +1,5 @@
- 
+include LICENSE
+include README.md
+include requirements.txt
+recursive-include eventbridge/templates *.html
+recursive-include eventbridge/static *.js *.css *.svg *.png 
